data: Fix devel headerbar selection-mode style
The selection-mode style was not showing.
Use the style provided as default in GTK4 and adapt it to our needs.

Closes: #208

--- a/data/application.css
+++ b/data/application.css
@@ -101,10 +101,19 @@ box#ArtistAlbumsWidget .artist-label {
 
 /* visual hint for development */
 .devel headerbar {
-    background: @theme_bg_color linear-gradient(to top,
-                                                alpha(@theme_selected_bg_color, 0.34),
-                                                alpha(@theme_selected_bg_color, 0.27) 2px,
-                                                alpha(@theme_selected_bg_color, 0.20) 3px);
+    background: transparent -gtk-icontheme("system-run-symbolic") 80% 0/128px 128px no-repeat,
+                linear-gradient(to left,
+                                mix(@theme_fg_color, @theme_bg_color, 0.5) 0%,
+                                @theme_bg_color 25%);
+    color: alpha(@theme_fg_color, 0.2);
+}
+
+.devel headerbar.selection-mode {
+    background: transparent -gtk-icontheme("system-run-symbolic") 80% 0/128px 128px no-repeat,
+                linear-gradient(to left,
+                                @theme_selected_bg_color 0%,
+                                @theme_selected_bg_color 25%);
+    color: alpha(@theme_fg_color, 0.2);
 }
 
 /* headerbar - smooth selection-mode transition */
